--- a/Telas/portfolio.html
+++ b/Telas/portfolio.html
@@ -33,7 +33,7 @@
                         <li class="nav-item">
                             <a class="nav-link" href="Inicial_page.html">Contrate um serviço</a>
                         </li>
-                        <li class="nav-item active">
+                        <li class="nav-item">
                             <a class="nav-link" href="Cadastro-serviço.html">Registre seu trabalho</a>
                         </li>
                     </ul>
@@ -48,8 +48,11 @@
         <div class="container h-100">
             <div class="row h-100 align-items-center">
                 <div class="col-lg-12">
-                    <h1 class="display-4 text-white mt-5 mb-2">Business Name or Tagline</h1>
-                    <p class="lead mb-5 text-white-50">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non possimus ab labore provident mollitia. Id assumenda voluptate earum corporis facere quibusdam quisquam iste ipsa cumque unde nisi, totam quas ipsam.</p>
+                    <h1 class="display-4 text-white mt-5 mb-2">Maria Antonieta</h1>
+                    <p class="lead mb-5 text-white-50">Uma breve dedscrição dela sobre ela mesma</p>
+                    <span class="badge badge-light badge-pill">Reparos</span> <span class="badge badge-light badge-pill">Vestidos de baile</span> <span class="badge badge-light badge-pill">Saias</span>
+                    <span class="badge badge-light badge-pill">Reparos</span> <span class="badge badge-light badge-pill">Vestidos de baile</span> <span class="badge badge-light badge-pill">Saias</span>
+                    <h1 class="display-4 text-white mt-3 mb-2"> &#9733; &#9733; &#9733; &#9733; &#9734;</h1>
                 </div>
             </div>
         </div>
@@ -58,41 +61,111 @@
     <!-- Page Content -->
     <div class="container">
 
-        <div class="row">
-            <div class="col-md-8 mb-5">
-                <h2>What We Do</h2>
-                <hr>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A deserunt neque tempore recusandae animi soluta quasi? Asperiores rem dolore eaque vel, porro, soluta unde debitis aliquam laboriosam. Repellat explicabo, maiores!</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis optio neque consectetur consequatur magni in nisi, natus beatae quidem quam odit commodi ducimus totam eum, alias, adipisci nesciunt voluptate. Voluptatum.</p>
-                <a class="btn btn-primary btn-lg" href="#">Call to Action &raquo;</a>
+        <!--Section: Contact v.1-->
+        <section class="section pb-5">
+
+            <!--Section heading-->
+            <h2 class="section-heading h1 pt-4">Entre em contato</h2>
+            <!--Section description-->
+
+            <div class="row">
+
+                <!--Grid column-->
+                <div class="col-lg-5 mb-4">
+
+                    <!--Form with header-->
+                    <div class="card">
+
+                        <div class="card-body">
+                            <!--Header-->
+                            <div class="form-header blue accent-1">
+                                <h3><i class="fas fa-envelope"></i>Mande uma solicitação de serviço</h3>
+                            </div>
+
+                            <!--Body-->
+                            <div class="md-form">
+                                <i class="fas fa-user prefix grey-text"></i>
+                                <input type="text" id="form-name" class="form-control">
+                                <label for="form-name">Seu nome</label>
+                            </div>
+
+                            <div class="md-form">
+                                <i class="fas fa-envelope prefix grey-text"></i>
+                                <input type="text" id="form-email" class="form-control">
+                                <label for="form-email">Seu email</label>
+                            </div>
+
+                            <div class="md-form">
+                                <i class="fas fa-tag prefix grey-text"></i>
+                                <input type="text" id="form-Subject" class="form-control">
+                                <label for="form-Subject">Serviço</label>
+                            </div>
+
+                            <div class="md-form">
+                                <i class="fas fa-pencil-alt prefix grey-text"></i>
+                                <textarea id="form-text" class="form-control md-textarea" rows="3"></textarea>
+                                <label for="form-text">Mais detalhes</label>
+                            </div>
+
+                            <div class="text-center mt-4">
+                                <button class="btn btn-outline-primary my-2 my-sm-0">Enviar</button>
+                            </div>
+
+                        </div>
+
+                    </div>
+                    <!--Form with header-->
+
+                </div>
+                <!--Grid column-->
+
+                <!--Grid column-->
+                <div class="col-lg-7">
+
+                    <!--Google map-->
+                    <div id="map-container-google-11" class="z-depth-1-half map-container-6" style="height: 400px">
+                        <iframe src="https://maps.google.com/maps?q=new%20delphi&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" style="border:0" allowfullscreen></iframe>
+                    </div>
+
+                    <br>
+                    <!--Buttons-->
+                    <div class="row text-center">
+                        <div class="col-md-4">
+                            <a class="btn btn-outline-primary my-2 my-sm-0"><i class="fas fa-map-marker-alt"></i></a>
+                            <p>San Francisco, CA 94126</p>
+                            <p>United States</p>
+                        </div>
+
+                        <div class="col-md-4">
+                            <a class="btn btn-outline-primary my-2 my-sm-0"><i class="fas fa-phone"></i></a>
+                            <p>+ 01 234 567 89</p>
+                            <p>Mon - Fri, 8:00-22:00</p>
+                        </div>
+
+                        <div class="col-md-4">
+                            <a class="btn btn-outline-primary my-2 my-sm-0"><i class="fas fa-envelope"></i></a>
+                            <p>info@gmail.com</p>
+                            <p>sale@gmail.com</p>
+                        </div>
+                    </div>
+
+                </div>
+                <!--Grid column-->
+
             </div>
-            <div class="col-md-4 mb-5">
-                <h2>Contact Us</h2>
-                <hr>
-                <address>
-          <strong>Start Bootstrap</strong>
-          <br>3481 Melrose Place
-          <br>Beverly Hills, CA 90210
-          <br>
-        </address>
-                <address>
-          <abbr title="Phone">P:</abbr>
-          (123) 456-7890
-          <br>
-          <abbr title="Email">E:</abbr>
-          <a href="mailto:#">name@example.com</a>
-        </address>
-            </div>
-        </div>
+
+        </section>
+        <!--Section: Contact v.1-->
         <!-- /.row -->
+        <h2>Serviços prestados recentemente</h2>
 
         <div class="row">
             <div class="col-md-4 mb-5">
                 <div class="card h-100">
-                    <img class="card-img-top" src="http://placehold.it/300x200" alt="">
+                    <img class="card-img-top" src="http://placehold.it/150x50" alt="">
                     <div class="card-body">
-                        <h4 class="card-subtitle">Card title</h4>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque sequi doloribus.</p>
+                        <h4 class="card-subtitle">Muito Profissional!</h4>
+                        <p class="card-text">Uma breve descrição do serviço que ela prestou</p>
                     </div>
                     <div class="card-footer">
                         <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -100,11 +173,11 @@
                 </div>
             </div>
             <div class="col-md-4 mb-5">
-                <div class="card h-75">
+                <div class="card h-100">
                     <img class="card-img-top" src="http://placehold.it/300x200" alt="25">
                     <div class="card-body">
-                        <h4 class="card-subtitle">Card title</h4>
-                        <p class="card-text">Mais informação sobre ela. </p>
+                        <h4 class="card-subtitle">Ótima</h4>
+                        <p class="card-text">Uma breve descrição do serviço que ela prestou</p>
                     </div>
                     <div class="card-footer">
                         <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -112,10 +185,11 @@
                 </div>
             </div>
             <div class="col-md-4 mb-5">
-                <div class="card h-50">
+                <div class="card h-100">
+                    <img class="card-img-top" src="http://placehold.it/150x50" alt="">
                     <div class="card-body">
-                        <h5 class="card-subtitle">Card title</h5>
-                        <p class="card-text">Uma breve descrição do serviço</p>
+                        <h5 class="card-subtitle">Perfeita</h5>
+                        <p class="card-text">Uma breve descrição do serviço que ela prestou</p>
                     </div>
                     <div class="card-footer">
                         <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -124,13 +198,77 @@
             </div>
         </div>
         <!-- /.row -->
-
     </div>
     <!-- /.container -->
-    <!-- Footer Links -->
-    <div class="footer-copyright text-center py-3" style="color: #ffffff">© 2019 Copyright:
-        <a href="https://mdbootstrap.com/education/bootstrap/"> TrampMe.com</a>
-    </div>
+    <!-- Footer-->
+    <footer class="page-footer font-small indigo" style="background-color: #011E2E;">
+
+        <div class="container text-center text-md-left">
+            <div class="row">
+                <div class="col-md-3 mx-auto">
+                    <!-- Links -->
+                    <h5 class="font-weight-bold text-uppercase mt-3 mb-4" style="color: #ffffff">TrampMe</h5>
+                    <ul class="list-unstyled">
+                        <li>
+                            <a href="#!">Quem somos?</a>
+                        </li>
+                        <li>
+                            <a href="#!">Fale conosco</a>
+                        </li>
+                        <li>
+                            <a href="#!">Vem pro TrampMe</a>
+                        </li>
+                    </ul>
+                </div>
+                <hr class="clearfix w-100 d-md-none">
+                <div class="col-md-3 mx-auto">
+                    <!-- Links 2-->
+                    <h5 class="font-weight-bold text-uppercase mt-3 mb-4" style="color: #ffffff">Como participar?</h5>
+                    <ul class="list-unstyled">
+                        <li>
+                            <a href="#!">Quais as vantagens do TrampMe?</a>
+                        </li>
+                        <li>
+                            <a href="#!">Coisa 2</a>
+                        </li>
+                        <li>
+                            <a href="#!">Coisa 3</a>
+                        </li>
+                    </ul>
+                </div>
+                <hr class="clearfix w-100 d-md-none">
+                <div class="col-md-3 mx-auto">
+                    <!-- Links dos icons -->
+                    <!-- isso aqui não está funcionando. Os ícones não aparecem-->
+                    <h5 class="font-weight-bold text-uppercase mt-3 mb-4" style="color: #ffffff">Social</h5>
+                    <ul class="list-unstyled">
+                        <li>
+                            <a class="fb-ic" style="color: #ffffff">
+                                <i class="fab fa-facebook-square fa-lg white-text mr-md-5 mr-3 fa-2x"></i>
+                            </a>
+                        </li>
+                        <br>
+                        <li>
+                            <a class="ins-ic" style="color: #ffffff">
+                                <i class="fab fa-instagram fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+                            </a>
+                        </li>
+                        <br>
+                        <li>
+                            <a class="tw-ic" style="color: #ffffff">
+                                <i class="fab fa-twitter fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+                            </a>
+                        </li>
+                        <!-- Acaba aqui o problema-->
+                    </ul>
+                </div>
+                <hr class="clearfix w-100 d-md-none">
+            </div>
+        </div>
+        <!-- Footer Links -->
+        <div class="footer-copyright text-center py-3" style="color: #ffffff">© 2019 Copyright:
+            <a href="https://mdbootstrap.com/education/bootstrap/"> TrampMe.com</a>
+        </div>
     </footer>
     <!-- Footer final-->
 </body>
