--- a/Telas/Cadastro.html
+++ b/Telas/Cadastro.html
@@ -55,6 +55,8 @@
     <div class="row" class="fundo_contato" style="margin-left: 30%; margin-bottom: 10%">
         <div class="col-md-6">
             <div class="card">
+                <br>
+                <h2 style="text-align: center">Cadastre-se já</h2>
                 <div class="card-body">
                     <form>
                         <div class="form-row">
@@ -63,12 +65,12 @@
                                 <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
                             </div>
                             <div class="form-group col-md-6">
-                                <label for="inputPassword4">Password</label>
-                                <input type="password" class="form-control" id="inputPassword4" placeholder="Password">
+                                <label for="inputPassword4">Senha</label>
+                                <input type="password" class="form-control" id="inputPassword4" placeholder="Senha">
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="inputAddress">Address</label>
+                            <label for="inputAddress">Data de nascimento</label>
                             <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
                         </div>
                         <div class="form-group">
@@ -78,18 +80,18 @@
                         </div>
                         <div class="form-row">
                             <div class="form-group col-md-6">
-                                <label for="inputCity">City</label>
+                                <label for="inputCity">Cidade</label>
                                 <input type="text" class="form-control" id="inputCity">
                             </div>
                             <div class="form-group col-md-4">
-                                <label for="inputState">State</label>
+                                <label for="inputState">Estado</label>
                                 <select id="inputState" class="form-control">
-                                    <option selected>Choose...</option>
+                                    <option selected>Selecione</option>
                                     <option>...</option>
                                 </select>
                             </div>
                             <div class="form-group col-md-2">
-                                <label for="inputZip">Zip</label>
+                                <label for="inputZip">Sigla</label>
                                 <input type="text" class="form-control" id="inputZip">
                             </div>
                         </div>
@@ -97,7 +99,7 @@
                             <div class="form-check">
                                 <input class="form-check-input" type="checkbox" id="gridCheck">
                                 <label class="form-check-label" for="gridCheck">
-                                    Check me out
+                                    concordo e aceito os termos de uso
                                 </label>
                             </div>
                         </div>
