--- a/Telas/Cadastro-serviço.html
+++ b/Telas/Cadastro-serviço.html
@@ -10,10 +10,17 @@
     <script src="https://kit.fontawesome.com/10a7600da8.js" crossorigin="anonymous"></script>
 
     <!-- Bootstrap-->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 
 </head>
 
@@ -23,10 +30,14 @@
         <div class="container">
             <!--Navbar-->
             <nav class="navbar navbar-expand-lg navbar-dark bg-#011E2E">
-                <a class="navbar-brand" href="#">TrampMe</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                        </button>
+                <a class="navbar-brand" href="Inicial_page.html">
+                    <img src="../images/Logo.png" style="width: 120px; height: 45px; margin: 0%;">
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
 
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
@@ -37,14 +48,15 @@
                             <a class="nav-link" href="Cadastro-serviço.html">Registre seu trabalho</a>
                         </li>
                     </ul>
-                    <button class="btn btn-outline-primary my-2 my-sm-0" href="Login.html" type="submit">Acessar</button>
+                    <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">
+                        <a class="nav-link" href="Login.html">Acessar</a></button>
                 </div>
             </nav>
         </div>
     </header>
 
     <!--Cadastro-->
-
+    <br><br><br><br>
     <section>
         <div class="cadastro">
             <div class="container">
@@ -58,27 +70,33 @@
                                 <form>
                                     <div class="form-group">
                                         <label for="exampleInputPassword1">Nome Completo</label>
-                                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Digite seu nome completo">
+                                        <input type="name" class="form-control" id="exampleInputPassword1"
+                                            placeholder="Digite seu nome completo">
                                     </div>
                                     <div class="form-group">
                                         <label for="exampleInputEmail1">Email</label>
-                                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Digite seu email">
-                                        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                                        <input type="email" class="form-control" id="exampleInputEmail1"
+                                            aria-describedby="emailHelp" placeholder="Digite seu email">
+                                        <small id="emailHelp" class="form-text text-muted">We'll never share your email
+                                            with anyone else.</small>
                                     </div>
                                     <div class="form-group">
                                         <label for="exampleInputPassword1">CPF</label>
-                                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Digite o número do seu CPF">
+                                        <input type="password" class="form-control" id="exampleInputPassword1"
+                                            placeholder="Digite o número do seu CPF">
                                     </div>
                                     <div class="form-group">
                                         <select class="form-control">
-                                  <option>Categoria</option>
-                                  </select>
+                                            <option>Categoria</option>
+                                        </select>
                                         <label for="exampleInputPassword1">Senha</label>
-                                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Digite sua senha">
+                                        <input type="password" class="form-control" id="exampleInputPassword1"
+                                            placeholder="Digite sua senha">
                                     </div>
                                     <div class="form-group form-check">
                                         <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                                        <label class="form-check-label" for="exampleCheck1">Li e aceito os termos do contrato</label>
+                                        <label class="form-check-label" for="exampleCheck1">Li e aceito os termos do
+                                            contrato</label>
                                     </div>
                                     <button type="submit" class="btn btn-primary">Cadastrar</button>
                                 </form>
@@ -111,20 +129,23 @@
                         <i class="fa fa-search fa-lg white-text mr-md-5 mr-3 fa-4x" style="margin-left: 38%"></i>
                         <br>
                         <br>
-                        <p style="text-align: center;margin-right: 0%">Ao clicar em cadastre-se você <br> nos informou seus dados.<br> Criaremos um perfil para você!</p>
+                        <p style="text-align: center;margin-right: 0%">Ao clicar em cadastre-se você <br> nos informou
+                            seus dados.<br> Criaremos um perfil para você!</p>
                     </div>
                     <div class="col-md-4 wow fadeInUp templatemo-box" data-wow-delay="0.3s">
                         <i class="fa fa-code fa-lg white-text mr-md-5 mr-3 fa-4x" style="margin-left: 38%"></i>
                         <br>
                         <br>
                         <p style="text-align: center;margin-right: 0%">
-                            Configure o perfil para que<br> fique o mais parecido com você! Lembre-se que o modo como você apresenta seu trabalho é essencial para uma boa divulgação. </p>
+                            Configure o perfil para que<br> fique o mais parecido com você! Lembre-se que o modo como
+                            você apresenta seu trabalho é essencial para uma boa divulgação. </p>
                     </div>
                     <div class="col-md-4 wow fadeInUp templatemo-box" data-wow-delay="0.3s">
                         <i class="fa fa-users fa-lg white-text mr-md-5 mr-3 fa-4x" style="margin-left: 38%"></i>
                         <br>
                         <br>
-                        <p style="text-align: center;margin-right: 0%">Agora é só aguardar as<br> solicitações de contrato para a<br> prestação de serviços</p>
+                        <p style="text-align: center;margin-right: 0%">Agora é só aguardar as<br> solicitações de
+                            contrato para a<br> prestação de serviços</p>
                     </div>
                 </div>
             </table>
@@ -146,14 +167,21 @@
                             <h6 class="card-price text-center">R$0<span class="period">/mês</span></h6>
                             <hr>
                             <ul class="fa-ul">
-                                <li><span class="fa-li"><i class="fas fa-check"></i></span>Cadastre seu trabalho na plataforma</li>
-                                <li><span class="fa-li"><i class="fas fa-check"></i></span>Seja acessado nas buscas de centenas de peessoas interessadas em contratar seviços </li>
-                                <li><span class="fa-li"><i class="fas fa-check"></i></span>Receba avaliações de clientes que te contratarem</li>
-                                <li><span class="fa-li"><i class="fas fa-check"></i></span>Tenha acesso às API’s de pagamento, rápido, fácil e eficiente para você</li>
-                                <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>Obtenha posições de destaques nas buscas por seu tipo de serviço </li>
-                                <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>Publique ainda mais trabalhos e ganhe melhores avaliações de seus clientes</li>
+                                <li><span class="fa-li"><i class="fas fa-check"></i></span>Cadastre seu trabalho na
+                                    plataforma</li>
+                                <li><span class="fa-li"><i class="fas fa-check"></i></span>Seja acessado nas buscas de
+                                    centenas de peessoas interessadas em contratar seviços </li>
+                                <li><span class="fa-li"><i class="fas fa-check"></i></span>Receba avaliações de clientes
+                                    que te contratarem</li>
+                                <li><span class="fa-li"><i class="fas fa-check"></i></span>Tenha acesso às API’s de
+                                    pagamento, rápido, fácil e eficiente para você</li>
+                                <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>Obtenha
+                                    posições de destaques nas buscas por seu tipo de serviço </li>
+                                <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>Publique
+                                    ainda mais trabalhos e ganhe melhores avaliações de seus clientes</li>
                             </ul>
-                            <a href="#" class="btn btn-block btn-primary text-uppercase" style="background-color:#1282a2">Selecionar</a>
+                            <a href="#" class="btn btn-block btn-primary text-uppercase"
+                                style="background-color:#1282a2">Selecionar</a>
                         </div>
                     </div>
                 </div>
@@ -165,15 +193,23 @@
                             <h6 class="card-price text-center">R$29<span class="period">/mês</span></h6>
                             <hr>
                             <ul class="fa-ul">
-                                <li><span class="fa-li"><i class="fas fa-check"></i></span><strong>Cadastre até 10 trabalhos seus na plataforma</strong></li>
-                                <li><span class="fa-li"><i class="fas fa-check"></i></span>Seja acessado nas buscas de centenas de peessoas interessadas em contratar seviços</li>
-                                <li><span class="fa-li"><i class="fas fa-check"></i></span>Receba avaliações de clientes que te contratarem</li>
-                                <li><span class="fa-li"><i class="fas fa-check"></i></span>Tenha acesso às API’s de pagamento, rápido, fácil e eficiente para você</li>
-                                <li><span class="fa-li"><i class="fas fa-check"></i></span>Obtenha posições de destaques nas buscas por seu tipo de serviço</li>
-                                <li><span class="fa-li"><i class="fas fa-check"></i></span>Adquira maiores recomendações do site</li>
-                                <li><span class="fa-li"><i class="fas fa-check"></i></span>Obtenha <strong>maior</strong> divulgação de suas marcas</li>
+                                <li><span class="fa-li"><i class="fas fa-check"></i></span><strong>Cadastre até 10
+                                        trabalhos seus na plataforma</strong></li>
+                                <li><span class="fa-li"><i class="fas fa-check"></i></span>Seja acessado nas buscas de
+                                    centenas de peessoas interessadas em contratar seviços</li>
+                                <li><span class="fa-li"><i class="fas fa-check"></i></span>Receba avaliações de clientes
+                                    que te contratarem</li>
+                                <li><span class="fa-li"><i class="fas fa-check"></i></span>Tenha acesso às API’s de
+                                    pagamento, rápido, fácil e eficiente para você</li>
+                                <li><span class="fa-li"><i class="fas fa-check"></i></span>Obtenha posições de destaques
+                                    nas buscas por seu tipo de serviço</li>
+                                <li><span class="fa-li"><i class="fas fa-check"></i></span>Adquira maiores recomendações
+                                    do site</li>
+                                <li><span class="fa-li"><i class="fas fa-check"></i></span>Obtenha
+                                    <strong>maior</strong> divulgação de suas marcas</li>
                             </ul>
-                            <a href="#" class="btn btn-block btn-primary text-uppercase" style="background-color:#1282a2">Selecionar</a>
+                            <a href="#" class="btn btn-block btn-primary text-uppercase"
+                                style="background-color:#434c4e">Selecionar</a>
                         </div>
                     </div>
                 </div>
@@ -214,7 +250,8 @@
                     <hr class="clearfix w-100 d-md-none">
                     <div class="col-md-3 mx-auto">
                         <!-- Links 2-->
-                        <h5 class="font-weight-bold text-uppercase mt-3 mb-4" style="color: #ffffff">Como participar?</h5>
+                        <h5 class="font-weight-bold text-uppercase mt-3 mb-4" style="color: #ffffff">Como participar?
+                        </h5>
                         <ul class="list-unstyled">
                             <li>
                                 <a href="#!">Quais as vantagens do TrampMe?</a>
