--- a/Telas/Cadastro.html
+++ b/Telas/Cadastro.html
@@ -30,7 +30,9 @@
         <div class="container">
             <!--Navbar-->
             <nav class="navbar navbar-expand-lg navbar-dark bg-#011E2E">
-                <a class="navbar-brand" href="Inicial_page.html">TrampMe</a>
+                <a class="navbar-brand" href="Inicial_page.html">
+                    <img src="../images/Logo.png" style="width: 120px; height: 45px; margin: 0%;">
+                </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -40,13 +42,15 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Serviços</a>
+                            <a class="nav-link" href="Inicial_page.html">Serviços</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Como funciona</a>
+                            <a class="nav-link" href="Cadastro-serviço.html">Como funciona</a>
                         </li>
                     </ul>
-                    <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Acessar</button>
+                    <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">
+                        <a class="nav-link" href="Login.html">Acessar</a>
+                    </button>
                 </div>
             </nav>
         </div>
@@ -71,12 +75,7 @@
                         </div>
                         <div class="form-group">
                             <label for="inputAddress">Data de nascimento</label>
-                            <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
-                        </div>
-                        <div class="form-group">
-                            <label for="inputAddress2">Address 2</label>
-                            <input type="text" class="form-control" id="inputAddress2"
-                                placeholder="Apartment, studio, or floor">
+                            <input type="text" class="form-control" id="inputAddress" placeholder="dd/mm/aaaa">
                         </div>
                         <div class="form-row">
                             <div class="form-group col-md-6">
@@ -90,9 +89,12 @@
                                     <option>...</option>
                                 </select>
                             </div>
-                            <div class="form-group col-md-2">
-                                <label for="inputZip">Sigla</label>
-                                <input type="text" class="form-control" id="inputZip">
+                            <div class="form-group col-md-4">
+                                <label for="inputZip">Sexo</label>
+                                <select id="inputState" class="form-control">
+                                        <option selected>Masculino</option>
+                                        <option>Feminino</option>
+                                    </select>
                             </div>
                         </div>
                         <div class="form-group">
