--- a/Telas/Login.html
+++ b/Telas/Login.html
@@ -30,7 +30,9 @@
         <div class="container">
             <!--Navbar-->
             <nav class="navbar navbar-expand-lg navbar-dark bg-#011E2E">
-                <a class="navbar-brand" href="Inicial_page.html">TrampMe</a>
+                <a class="navbar-brand" href="Inicial_page.html">
+                    <img src="../images/Logo.png" style="width: 120px; height: 45px; margin: 0%;">
+                </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -40,13 +42,12 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Serviços</a>
+                            <a class="nav-link" href="Inicial_page.html">Serviços</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Como funciona</a>
+                            <a class="nav-link" href="Cadastro-serviço.html">Como funciona</a>
                         </li>
                     </ul>
-                    <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Acessar</button>
                 </div>
             </nav>
         </div>
@@ -71,8 +72,9 @@
                             <label for="exampleInputPassword1">Senha</label>
                             <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha">
                         </div>
-                        <button type="button" class="btn btn-link">Esqueceu a senha?</button><br>
-                        <button type="button" class="btn btn-link" href="Cadastro.html">Não possui conta ainda?</button>
+                        <button type="button" class="btn btn-link" onclick="">Esqueceu a senha?</button><br>
+                        <button type="button" class="btn btn-link"><a href="Cadastro.html">Não possui conta
+                                ainda?</a></button>
                         <button type="submit" class="btn btn-primary" style="margin: 0% 4% 0% 25%; width: 50%;"
                             href="Inicial_page.html">Entrar</button>
                     </form>
